--- a/sass/pages/portfolio.scss
+++ b/sass/pages/portfolio.scss
@@ -118,27 +118,28 @@
 }
 
 #floatPortfolio{
-	width:100%;
+	/* width:100%; */
 	position:absolute;
 	height:auto;
 	background-color:white;
 	top:65px;
 	left:0;
-	display:none;
+	/* display:none; */
+	overflow-x:hidden;
 
 	.banner{
-		width:100%;
+		/* width:100%; */
 		height:150px;
-		background-color: red;
 		background-size:cover;
 		background-position:center center;
 	}
 
 	.logo{
 		height:auto;
-		width:100%;
+		/* width:100%; */
 		text-align: center;
 		padding: 10px 0;
+		margin:10px 0;
 
 		img{
 			width:90%;
@@ -148,20 +149,100 @@
 	}
 
 	.imagem{
-		background-color: blue;
+		text-align: center;
+		margin:10px 0;
+
+		img{
+			width:100%;
+			height:auto;
+		}
 	}
 
 	.titulo{
-		background-color: green;
+		color: $Titulo-Cor-Laranja;
+		
+		margin:10px 0 0px;
+		font-size:18px;
 	}
 
 	.tituloCinza{
-		width:100%;
+		/* width:100%; */
 		height:auto;
-		font-size: 25px;
+		font-size: 18px;
 		color:$Titulo-Cor-Cinza;
 		font-weight: 400;
 		text-transform: uppercase;
+		margin:10px 0 0px;
+	}
+
+	.texto{
+		height:auto;
+		margin:10px 0;
+	}
+
+	.btnSair{
+		height:40px;
+		background-color:green;
+		margin:10px 0;
+		text-align:center;
+		padding-top:5px;
+		color:#FFF;
+		font-weight: 400;
+		cursor:pointer;
+		font-size: 16px;
+	}
+
+
+	.slider{
+		height:auto;
+		margin:10px 0;
+
+		*{padding:0;}
+
+		.menuSuperior{
+			height:20px;
+			background-color:blue;
+
+		}
+
+		.arrow{
+			height:100px;
+			background-image: url($dir-img+'setaMobile.png');
+			background-position: 25%, center;
+			background-size: 45% auto;
+			background-repeat: no-repeat;
+
+			&.left{
+				-moz-transform: rotate(180deg);
+				-webkit-transform: rotate(180deg); 
+				transform:rotate(180deg);
+			}
+		}
+
+		.slideShow{
+			height:auto;
+			background-color:pink;
+			overflow-x: hidden;
+
+			.wrapperSlide{
+				width:100%;
+				height:auto;
+				position:relative;
+
+				img{
+					width:100%;
+					height:auto;
+					float:left;
+				}
+			}
+		}
+
+		.comment{
+			height:auto;
+			background-color: #EDEDED;
+			padding:10px;
+		}
+
 	}
 
 }
