--- a/sass/pages/portfolio.scss
+++ b/sass/pages/portfolio.scss
@@ -37,6 +37,7 @@
 
 	.FiltrosPortfolioContainer {
 		margin: 50px 0;
+		display:none;
 
 		.FiltrosPortfolio {
 			.FiltroPortfolio {
@@ -132,6 +133,7 @@
 		height:150px;
 		background-size:cover;
 		background-position:center center;
+
 	}
 
 	.logo{
@@ -140,10 +142,13 @@
 		text-align: center;
 		padding: 10px 0;
 		margin:10px 0;
+		
+		
 
 		img{
 			width:90%;
 			height:auto;
+			max-width:500px;
 		}
 
 	}
@@ -151,6 +156,8 @@
 	.imagem{
 		text-align: center;
 		margin:10px 0;
+		
+		
 
 		img{
 			width:100%;
@@ -163,6 +170,8 @@
 		
 		margin:10px 0 0px;
 		font-size:18px;
+		
+		
 	}
 
 	.tituloCinza{
@@ -173,28 +182,37 @@
 		font-weight: 400;
 		text-transform: uppercase;
 		margin:10px 0 0px;
+		text-align: center;
+		
+		
 	}
 
 	.texto{
 		height:auto;
 		margin:10px 0;
+		
+		
 	}
 
 	.btnSair{
 		height:40px;
-		background-color:green;
+		background-color:$Titulo-Cor-Cinza;
 		margin:10px 0;
 		text-align:center;
 		padding-top:5px;
 		color:#FFF;
 		font-weight: 400;
 		cursor:pointer;
-		font-size: 16px;
+		/* font-size: 16px; */
+		font-size: 21px;
+		
+		
 	}
 
 
 	.slider{
 		height:auto;
+		max-width: 1024px;
 		margin:10px 0;
 
 		*{padding:0;}
@@ -202,11 +220,12 @@
 		.menuSuperior{
 			height:20px;
 			background-color:blue;
-
+			display: none;
 		}
 
 		.arrow{
 			height:100px;
+			min-height:100%;
 			background-image: url($dir-img+'setaMobile.png');
 			background-position: 25%, center;
 			background-size: 45% auto;
@@ -275,8 +294,12 @@
 	#floatPortfolio{
 		
 		.banner{
+			height:250px;
 		}
 
+		.tituloCinza{
+			font-size: 28px;
+		}
 	}
 	
 }
