--- a/sass/pages/portfolio.scss
+++ b/sass/pages/portfolio.scss
@@ -127,6 +127,7 @@
 	left:0;
 	display:none;
 	overflow-x:hidden;
+	padding: 0 15px;
 
 	.conteudo{
 		max-width:850px;
@@ -137,7 +138,10 @@
 		/* width:100%; */
 		height:150px;
 		background-size:cover;
+		background-color: #37a7cc;
 		background-position:center center;
+		background-size: contain, cover;
+		background-repeat: no-repeat;
 
 	}
 
@@ -146,7 +150,7 @@
 		/* width:100%; */
 		text-align: center;
 		padding: 10px 0;
-		margin:20px 0;
+		margin:20px 0 10px;
 		
 		
 
@@ -253,7 +257,7 @@
 			background-position: 25%, center;
 			background-size: 45% auto;
 			background-repeat: no-repeat;
-			margin-top: 20%;
+			margin-top: 13%;
 
 			&.left{
 				-moz-transform: rotate(180deg);
@@ -320,16 +324,41 @@
 			height:250px;
 		}
 
+		.titulo{
+			.conteudo{
+			
+				padding:0 35px;
+			}
+		}
+
 		.tituloCinza{
 			.conteudo{
 				font-size: 28px;
 			}
 		}
 
+		.texto{
+
+			.conteudo{
+				width:100%;
+				padding:0 35px;
+			}
+		}
+
+		.btnSair{
+
+			.conteudo{
+				
+	    		padding: 9px 35px;
+			}
+			
+			
+		}
+
 		.slider{
 			.arrow{
 				background-size: 25% auto;
-
+				margin-top: 20%;
 				
 
 			}
