--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -13599,59 +13599,63 @@ html, body {
   left: 0;
   display: none;
   overflow-x: hidden;
+  padding: 0 15px;
 }
-/* line 131, ../sass/pages/portfolio.scss */
+/* line 132, ../sass/pages/portfolio.scss */
 #floatPortfolio .conteudo {
   max-width: 850px;
   margin: 0 auto;
 }
-/* line 136, ../sass/pages/portfolio.scss */
+/* line 137, ../sass/pages/portfolio.scss */
 #floatPortfolio .banner {
   /* width:100%; */
   height: 150px;
   background-size: cover;
+  background-color: #37a7cc;
   background-position: center center;
+  background-size: contain, cover;
+  background-repeat: no-repeat;
 }
-/* line 144, ../sass/pages/portfolio.scss */
+/* line 148, ../sass/pages/portfolio.scss */
 #floatPortfolio .logo {
   height: auto;
   /* width:100%; */
   text-align: center;
   padding: 10px 0;
-  margin: 20px 0;
+  margin: 20px 0 10px;
 }
-/* line 153, ../sass/pages/portfolio.scss */
+/* line 157, ../sass/pages/portfolio.scss */
 #floatPortfolio .logo img {
   width: 90%;
   height: auto;
   max-width: 500px;
 }
-/* line 161, ../sass/pages/portfolio.scss */
+/* line 165, ../sass/pages/portfolio.scss */
 #floatPortfolio .imagem {
   text-align: center;
   margin: 20px 0;
 }
-/* line 167, ../sass/pages/portfolio.scss */
+/* line 171, ../sass/pages/portfolio.scss */
 #floatPortfolio .imagem img {
   width: 100%;
   height: auto;
 }
-/* line 173, ../sass/pages/portfolio.scss */
+/* line 177, ../sass/pages/portfolio.scss */
 #floatPortfolio .titulo {
   margin: 20px 0 0px;
 }
-/* line 177, ../sass/pages/portfolio.scss */
+/* line 181, ../sass/pages/portfolio.scss */
 #floatPortfolio .titulo .conteudo {
   color: #E77108;
   font-size: 18px;
 }
-/* line 186, ../sass/pages/portfolio.scss */
+/* line 190, ../sass/pages/portfolio.scss */
 #floatPortfolio .tituloCinza {
   /* width:100%; */
   height: auto;
   margin: 20px 0 0px;
 }
-/* line 191, ../sass/pages/portfolio.scss */
+/* line 195, ../sass/pages/portfolio.scss */
 #floatPortfolio .tituloCinza .conteudo {
   font-size: 18px;
   color: #6B6B6B;
@@ -13659,17 +13663,17 @@ html, body {
   text-transform: uppercase;
   text-align: center;
 }
-/* line 203, ../sass/pages/portfolio.scss */
+/* line 207, ../sass/pages/portfolio.scss */
 #floatPortfolio .texto {
   height: auto;
   margin: 20px 0;
   font-size: 16px;
 }
-/* line 211, ../sass/pages/portfolio.scss */
+/* line 215, ../sass/pages/portfolio.scss */
 #floatPortfolio .btnSair {
   margin: 20px 0;
 }
-/* line 214, ../sass/pages/portfolio.scss */
+/* line 218, ../sass/pages/portfolio.scss */
 #floatPortfolio .btnSair .conteudo {
   height: 40px;
   background-color: #EDEDED;
@@ -13680,28 +13684,28 @@ html, body {
   font-size: 17px;
   padding: 9px 20px;
 }
-/* line 231, ../sass/pages/portfolio.scss */
+/* line 235, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider {
   height: auto;
   /* max-width: 1024px; */
   margin: 20px 0;
 }
-/* line 236, ../sass/pages/portfolio.scss */
+/* line 240, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider * {
   padding: 0;
 }
-/* line 238, ../sass/pages/portfolio.scss */
+/* line 242, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .conteudo {
   max-width: 1024px;
   margin: 0 auto;
 }
-/* line 243, ../sass/pages/portfolio.scss */
+/* line 247, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .menuSuperior {
   height: 20px;
   background-color: blue;
   display: none;
 }
-/* line 249, ../sass/pages/portfolio.scss */
+/* line 253, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .arrow {
   height: 100px;
   min-height: 100%;
@@ -13709,32 +13713,32 @@ html, body {
   background-position: 25%, center;
   background-size: 45% auto;
   background-repeat: no-repeat;
-  margin-top: 20%;
+  margin-top: 13%;
 }
-/* line 258, ../sass/pages/portfolio.scss */
+/* line 262, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .arrow.left {
   -moz-transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-/* line 265, ../sass/pages/portfolio.scss */
+/* line 269, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .slideShow {
   height: auto;
   overflow-x: hidden;
 }
-/* line 269, ../sass/pages/portfolio.scss */
+/* line 273, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .slideShow .wrapperSlide {
   width: 100%;
   height: auto;
   position: relative;
 }
-/* line 274, ../sass/pages/portfolio.scss */
+/* line 278, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .slideShow .wrapperSlide img {
   width: 100%;
   height: auto;
   float: left;
 }
-/* line 282, ../sass/pages/portfolio.scss */
+/* line 286, ../sass/pages/portfolio.scss */
 #floatPortfolio .slider .comment {
   height: auto;
   background-color: #EDEDED;
@@ -13742,26 +13746,40 @@ html, body {
 }
 
 @media (min-width: 768px) {
-  /* line 304, ../sass/pages/portfolio.scss */
+  /* line 308, ../sass/pages/portfolio.scss */
   #ContentPortfolio .col-xs-12 .ImgPortfolioContainer .FiltroImgPortfolio .FiltroImgInfo .FiltroImgSeparador {
     display: block;
   }
-  /* line 308, ../sass/pages/portfolio.scss */
+  /* line 312, ../sass/pages/portfolio.scss */
   #ContentPortfolio .col-xs-12 .ImgPortfolioContainer .FiltroImgPortfolio .FiltroImgInfo .FiltroImgTags {
     display: block;
   }
 
-  /* line 319, ../sass/pages/portfolio.scss */
+  /* line 323, ../sass/pages/portfolio.scss */
   #floatPortfolio .banner {
     height: 250px;
   }
-  /* line 324, ../sass/pages/portfolio.scss */
+  /* line 328, ../sass/pages/portfolio.scss */
+  #floatPortfolio .titulo .conteudo {
+    padding: 0 35px;
+  }
+  /* line 335, ../sass/pages/portfolio.scss */
   #floatPortfolio .tituloCinza .conteudo {
     font-size: 28px;
   }
-  /* line 330, ../sass/pages/portfolio.scss */
+  /* line 342, ../sass/pages/portfolio.scss */
+  #floatPortfolio .texto .conteudo {
+    width: 100%;
+    padding: 0 35px;
+  }
+  /* line 350, ../sass/pages/portfolio.scss */
+  #floatPortfolio .btnSair .conteudo {
+    padding: 9px 35px;
+  }
+  /* line 359, ../sass/pages/portfolio.scss */
   #floatPortfolio .slider .arrow {
     background-size: 25% auto;
+    margin-top: 20%;
   }
 }
 /* line 1, ../sass/pages/clientesCarrousel.scss */
