Quem Somos Atualizado .7

--- a/sass/pages/group.scss
+++ b/sass/pages/group.scss
@@ -82,7 +82,7 @@
 					width:($Tamanho-Foto-xs)+px;
 					height:($Tamanho-Foto-xs)+px;
 					margin:0 auto;
-					background-image: url($dir-img+'sprite-group_15.png');
+					background-image: url($dir-img+'sprite-group_16.png');
 					background-position: 1px -125px;
 					background-size: percentage($Numero-Pessoas/1);
 				}
@@ -228,7 +228,7 @@
 		{
 			width:125px;
 			height:124px;
-			background-image: url($dir-img+'sprite-group_16_1.png');
+			background-image: url($dir-img+'sprite-group_16.png');
 			z-index:4;
 			border-radius:50%;
 			cursor:pointer;
@@ -241,16 +241,16 @@
 			&.Dora			{	background-position: (((125*1)*-1)-1)+px -125px ;	top:36px;	left:190px;	&.Moved{  top:(36+50)+px;}}
 			&.Nilton		{	background-position: (((125*2)*-1)-1)+px -125px ;	top:252px;	left:220px;	&.Moved{  top:(252+50)+px;}}
 			&.Carol			{	background-position: (((125*3)*-1)-1)+px -125px ;	top:156px;	left:358px;	&.Moved{  top:(156+50)+px;}}
-			&.Pedro			{	background-position: (((125*4)*-1)-1)+px -125px ;	top:447px;	left:240px;	&.Moved{  top:(447+50)+px;}}
-			&.Fernando		{	background-position: (((125*5)*-1)-1)+px -125px ;	top:418px;	left:427px;	&.Moved{  top:(418+50)+px;}}
-			&.Bruno			{	background-position: (((125*6)*-1)-1)+px -125px ;	top:523px;	left:64px;	&.Moved{  top:(523+50)+px;}}
-			&.Diego			{	background-position: (((125*7)*-1)-1)+px -125px ;	top:45px;	left:540px;	&.Moved{  top:(45+50)+px;}}
-			&.Rogerio		{	background-position: (((125*8)*-1)-1)+px -125px ;	top:806px;	left:390px;	&.Moved{  top:(726+50)+px;}}
-			&.Lucas			{	background-position: (((125*9)*-1)-1)+px -125px ;	top:314px;	left:43px;	&.Moved{  top:(274+50)+px;}}
-			&.Fabio			{	background-position: (((125*10)*-1)-1)+px -125px ;	top:627px;	left:306px;	&.Moved{  top:(617+50)+px;}}
-			&.Vitor			{	background-position: (((125*11)*-1)-1)+px -125px ;	top:638px;	left:522px;	&.Moved{  top:(558+50)+px;}}
-			&.Alessandra	{	background-position: (((125*12)*-1)-1)+px -125px ;	top:737px;	left:68px;	&.Moved{  top:(737+50)+px;}}
-			&.Rafael		{	background-position: (((125*13)*-1)-1)+px -125px ;	top:252px;	left:565px;	&.Moved{  top:(252+50)+px;}}
+			&.Pedro			{	background-position: (((125*4)*-1)-1)+px -125px ;	top:418px;	left:427px;	&.Moved{  top:(447+50)+px;}}
+			/* &.Fernando		{	background-position: (((125*13)*-1)-1)+px -125px ;	top:447px;	left:240px;	&.Moved{  top:(418+50)+px;}} */
+			&.Bruno			{	background-position: (((125*5)*-1)-1)+px -125px ;	top:523px;	left:64px;	&.Moved{  top:(523+50)+px;}}
+			&.Diego			{	background-position: (((125*6)*-1)-1)+px -125px ;	top:45px;	left:540px;	&.Moved{  top:(45+50)+px;}}
+			&.Rogerio		{	background-position: (((125*7)*-1)-1)+px -125px ;	top:806px;	left:390px;	&.Moved{  top:(726+50)+px;}}
+			&.Lucas			{	background-position: (((125*8)*-1)-1)+px -125px ;	top:314px;	left:43px;	&.Moved{  top:(274+50)+px;}}
+			&.Fabio			{	background-position: (((125*9)*-1)-1)+px -125px ;	top:627px;	left:306px;	&.Moved{  top:(617+50)+px;}}
+			&.Vitor			{	background-position: (((125*10)*-1)-1)+px -125px ;	top:638px;	left:522px;	&.Moved{  top:(558+50)+px;}}
+			&.Alessandra	{	background-position: (((125*11)*-1)-1)+px -125px ;	top:737px;	left:68px;	&.Moved{  top:(737+50)+px;}}
+			&.Rafael		{	background-position: (((125*12)*-1)-1)+px -125px ;	top:252px;	left:565px;	&.Moved{  top:(252+50)+px;}}
 
 			/* &.Julia			{	background-position: (((125*0)*-1)-1)+px -125px ;	top:GetPositionRadius($CentroTabletLeft, $CentroTabletTop, 0, 0, "Y")+px;		left:GetPositionRadius($CentroTabletLeft, $CentroTabletTop, 0, 0, "X")+px;	}
 			&.Dora			{	background-position: (((125*1)*-1)-1)+px -125px ;	top:GetPositionRadius($CentroTabletLeft, $CentroTabletTop, 200, 100, "Y")+px;	left:GetPositionRadius($CentroTabletLeft, $CentroTabletTop, 200, 100, "X")+px;	}
@@ -304,7 +304,7 @@
 			float:left;
 			margin-right:2px;
 			position:absolute; 
-			background-image: url($dir-img+'sprite-group_15.png');
+			background-image: url($dir-img+'sprite-group_16.png');
 			z-index:4;
 			border-radius:50%;
 			cursor:pointer;
@@ -314,16 +314,16 @@
 			&.Dora			{	background-position: (((125*1)*-1)-1)+px -125px ;	top:280px;	left:(563-55)+px;	 &.Moved{ top:(270+50)+px;}}
 			&.Nilton		{	background-position: (((125*2)*-1)-1)+px -125px ;	top:278px;	left:(336-55)+px;	 &.Moved{ top:(238+50)+px;}}
 			&.Carol			{	background-position: (((125*3)*-1)-1)+px -125px ;	top:476px;	left:(668-55)+px;	 &.Moved{ top:(433+50)+px;}}
-			&.Pedro			{	background-position: (((125*4)*-1)-1)+px -125px ;	top:476px;	left:(465-55)+px;	 &.Moved{ top:(426+50)+px;}}
-			&.Fernando		{	background-position: (((125*5)*-1)-1)+px -125px ;	top:662px;	left:(788)+px;	 	 &.Moved{ top:(582+50)+px;}}
-			&.Bruno			{	background-position: (((125*6)*-1)-1)+px -125px ;	top:609px;	left:(60)+px;	 	 &.Moved{ top:(609+50)+px;}}
-			&.Diego			{	background-position: (((125*7)*-1)-1)+px -125px ;	top:80px;	left:(546-55)+px;	 &.Moved{ top:(80+50)+px;}}
-			&.Rogerio		{	background-position: (((125*8)*-1)-1)+px -125px ;	top:672px;	left:(405)+px;	 	 &.Moved{ top:(582+50)+px;}}
-			&.Lucas			{	background-position: (((125*9)*-1)-1)+px -125px ;	top:339px;	left:(88-55)+px;	 &.Moved{ top:(299+50)+px;}}
-			&.Fabio			{	background-position: (((125*10)*-1)-1)+px -125px ;	top:80px;	left:(766-55)+px;	 &.Moved{ top:(80+50)+px;}}
-			&.Vitor			{	background-position: (((125*11)*-1)-1)+px -125px ;	top:55px;	left:(300-55)+px;	 &.Moved{ top:(55+50)+px;}}
-			&.Alessandra	{	background-position: (((125*12)*-1)-1)+px -125px ;	top:277px;	left:(790-55)+px;	 &.Moved{ top:(277+50)+px;}}
-			&.Rafael		{	background-position: (((125*13)*-1)-1)+px -125px ;	top:470px;	left:(211)+px;	 	 &.Moved{ top:(410+50)+px;}}
+			&.Pedro			{	background-position: (((125*4)*-1)-1)+px -125px ;	top:662px;	left:(788)+px;		 &.Moved{ top:(426+50)+px;}}
+			/* &.Fernando		{	background-position: (((125*13)*-1)-1)+px -125px ;	top:476px;	left:(465-55)+px; 	 &.Moved{ top:(582+50)+px;}} */
+			&.Bruno			{	background-position: (((125*5)*-1)-1)+px -125px ;	top:609px;	left:(60)+px;	 	 &.Moved{ top:(609+50)+px;}}
+			&.Diego			{	background-position: (((125*6)*-1)-1)+px -125px ;	top:80px;	left:(546-55)+px;	 &.Moved{ top:(80+50)+px;}}
+			&.Rogerio		{	background-position: (((125*7)*-1)-1)+px -125px ;	top:672px;	left:(405)+px;	 	 &.Moved{ top:(582+50)+px;}}
+			&.Lucas			{	background-position: (((125*8)*-1)-1)+px -125px ;	top:339px;	left:(88-55)+px;	 &.Moved{ top:(299+50)+px;}}
+			&.Fabio			{	background-position: (((125*9)*-1)-1)+px -125px ;	top:80px;	left:(766-55)+px;	 &.Moved{ top:(80+50)+px;}}
+			&.Vitor			{	background-position: (((125*10)*-1)-1)+px -125px ;	top:55px;	left:(300-55)+px;	 &.Moved{ top:(55+50)+px;}}
+			&.Alessandra	{	background-position: (((125*11)*-1)-1)+px -125px ;	top:277px;	left:(790-55)+px;	 &.Moved{ top:(277+50)+px;}}
+			&.Rafael		{	background-position: (((125*12)*-1)-1)+px -125px ;	top:470px;	left:(211)+px;	 	 &.Moved{ top:(410+50)+px;}}
 
 
 			
